fix circle placement, navigation mobile bg, xs-breakpoint

--- a/css/ntrn-strs-header.css
+++ b/css/ntrn-strs-header.css
@@ -328,7 +328,7 @@ mobile bg circle shapes
     .nav-mobile-bg-shapes{
         background-image: url("../img/nav_mobile_bg_circles.svg");
         background-position: bottom 0 left 0;
-        background-size: 900px;
+        background-size: 768px;
         background-repeat: no-repeat;
         z-index: -3;
     }
